--- a/projekt.ipynb
+++ b/projekt.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "b) Izvoru informacije - Sekundarno istraživanje\n",
     "\n",
-    "c) Vemenu provedbe - Studija presjeka\n",
+    "c) Vremenu provedbe - Studija presjeka\n",
     "\n",
     "d) Načinu prikupljanja podataka - Dokumentarno istraživanje\n",
     "\n",
